<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" 
    android:orientation="vertical">
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:text="@string/welcome_title"
        android:textSize="40dp"/>
    
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:includeFontPadding="false" 
        android:text="@string/welcome_screen_message"
        android:textSize="20dp"/>
    
    <Button
        android:id="@+id/startButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/lets_go"
        android:layout_centerInParent="true"
        android:layout_gravity="center"/>
    </LinearLayout>

</RelativeLayout>