<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
    android:fitsSystemWindows="true"   
	tools:context=".MainActivity">
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/create_task_appbar_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"	    
        android:fitsSystemWindows="true"
       >
        ​<com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"           
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            
		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/create_task_appbar"
			android:layout_width="match_parent"		
            android:layout_height="?attr/actionBarSize"            		
			app:title="@string/task_create_title"
            app:layout_collapseMode="pin"
          />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
	</com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/create_task_appbar"
      >
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_task_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"   
        app:counterEnabled="true"
        app:counterMaxLength="25"
        android:hint="@string/task_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"        
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_task_title_layout"   
        app:counterEnabled="true"
        app:counterMaxLength="200"
        android:hint="@string/task_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"            
            android:gravity="start"          
            android:inputType="textMultiLine"            
            android:lines="5"
            android:maxLines="5"
            android:padding="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout> 
    
	<TextView
		android:id="@+id/from"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
		android:textSize="20dp"
		android:text="@string/task_end"
    />
	<!--<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:weightSum="2"
     >

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/create_task_start_date_layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"		
			android:hint="DU"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/create_task_start_date"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="none"
				android:focusable="false"/>

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/create_task_start_time_layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
			android:layout_weight="1"		
			android:hint="COMMENCE À"
			app:errorEnabled="true"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/create_task_start_time"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="none"
				android:focusable="false"/>

		</com.google.android.material.textfield.TextInputLayout>

	</LinearLayout>
    -->
    
     <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"      
        android:orientation="horizontal"
		android:weightSum="2">

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/create_task_end_date_layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"           
			android:layout_weight="1"
			android:hint="@string/task_end_date"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/create_task_end_date"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="none"
				android:focusable="false"/>

		</com.google.android.material.textfield.TextInputLayout>

		<!--<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/create_task_end_time_layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
			android:layout_weight="1"		
			android:hint="Heure"
			app:errorEnabled="true"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/create_task_end_time"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="none"
				android:focusable="false"/>

		</com.google.android.material.textfield.TextInputLayout>-->

	   </LinearLayout>
    </LinearLayout>
    
    <Button
        android:id="@+id/delete_task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"      
        android:text="@string/delete"
        style="?attr/materialButtonOutlinedStyle"
     />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

