<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        
        <com.google.android.material.appbar.AppBarLayout
            android:fitsSystemWindows="true"
            android:id="@+id/create_task_appbar_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            
            <com.google.android.material.appbar.CollapsingToolbarLayout
                style="?attr/collapsingToolbarLayoutLargeStyle"
                android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
                android:layout_width="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">
                
                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/appbar"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    app:layout_collapseMode="pin"/>
                
            
            </com.google.android.material.appbar.CollapsingToolbarLayout>
            
        
        </com.google.android.material.appbar.AppBarLayout>
        
        <LinearLayout
            android:layout_below="@+id/appbar"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">
            
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_task_title_layout"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                app:counterEnabled="true"
                app:counterMaxLength="25"
                android:hint="@string/event_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_event_title"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
                
            
            </com.google.android.material.textfield.TextInputLayout>
            
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_task_title_layout"
                android:hint="@string/event_description"
                app:counterEnabled="true"
                app:counterMaxLength="200">
                
                <com.google.android.material.textfield.TextInputEditText
                    android:gravity="start"
                    android:id="@+id/edit_event_description"
                    android:inputType="textMultiLine"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:lines="5"
                    android:maxLines="5"
                    android:padding="10dp"/>
                
            
            </com.google.android.material.textfield.TextInputLayout>
            
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:text="@string/event_dates_and_hours"
                android:textSize="25dp"/>
            
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent">
                
                <TextView
                    android:clickable="true"
                    android:id="@+id/event_start_date"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="20dp"/>
                
                <TextView
                    android:clickable="true"
                    android:id="@+id/event_start_hours"
                    android:layout_alignParentRight="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="20dp"/>
                
            
            </RelativeLayout>
            
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="40dp"
                android:layout_width="match_parent">
                
                <TextView
                    android:clickable="true"
                    android:id="@+id/event_end_date"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="20dp"/>
                
                <TextView
                    android:clickable="true"
                    android:id="@+id/event_end_hours"
                    android:layout_alignParentRight="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="20dp"/>
                
            
            </RelativeLayout>
            
        
        </LinearLayout>
        
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent">
            
            <Button
                android:id="@+id/edit_event_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/edit"
                style="?attr/materialButtonOutlinedStyle"/>
            
            <Button
                android:id="@+id/delete_event_button"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/delete"
                style="?attr/materialButtonOutlinedStyle"/>
            
        
        </RelativeLayout>
        
    
    </LinearLayout>
    

</androidx.constraintlayout.widget.ConstraintLayout>